service/tests/requests/snapshots/products/can_create_product_with_setup@products.snap
---
source: tests/requests/products.rs
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"product\":{\"id\":1,\"pid\":\"PID\",\"categoryId\":103,\"name\":\"API Aggregate Product\",\"description\":\"Created from the aggregate API\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null},\"options\":[{\"id\":1,\"pid\":\"PID\",\"productId\":1,\"attributeId\":201,\"displayOrder\":1,\"createdAt\":\"DATE\"},{\"id\":2,\"pid\":\"PID\",\"productId\":1,\"attributeId\":202,\"displayOrder\":2,\"createdAt\":\"DATE\"}],\"pictures\":[{\"id\":1,\"pid\":\"PID\",\"productId\":1,\"variantId\":null,\"imageLink\":\"https://cdn.example.com/products/api-aggregate-main.png\",\"displayOrder\":1,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":2,\"pid\":\"PID\",\"productId\":1,\"variantId\":1,\"imageLink\":\"https://cdn.example.com/products/api-aggregate-black.png\",\"displayOrder\":2,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}],\"variants\":[{\"id\":1,\"pid\":\"PID\",\"productId\":1,\"sku\":\"API-AGGREGATE-BLK-M\",\"price\":\"59.99\",\"stockQuantity\":12,\"isDefault\":true,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}],\"variantAttributeValues\":[{\"id\":1,\"pid\":\"PID\",\"variantId\":1,\"attributeId\":201,\"attributeValueId\":203,\"createdAt\":\"DATE\"},{\"id\":2,\"pid\":\"PID\",\"variantId\":1,\"attributeId\":202,\"attributeValueId\":205,\"createdAt\":\"DATE\"}]}",
)
