service/tests/requests/snapshots/products/can_get_product_detail_by_slug@products.snap
---
source: tests/requests/products.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"id\":201,\"pid\":\"PID\",\"slug\":\"classic-cotton-t-shirt\",\"name\":\"Classic Cotton T-shirt\",\"description\":\"Soft everyday cotton t-shirt with a relaxed fit.\",\"information\":{\"Care\":\"Machine wash cold\",\"Fit\":\"Relaxed\",\"Material\":\"100% cotton\"},\"tags\":[],\"category\":{\"id\":101,\"pid\":\"PID\",\"name\":\"t-shirts\",\"slug\":\"t-shirts\"},\"pictures\":[],\"options\":[{\"id\":201,\"pid\":\"PID\",\"attributeId\":201,\"attributePid\":\"PID\",\"attributeName\":\"colour\",\"attributeDescription\":\"The colour or finish used to distinguish product variants.\",\"displayOrder\":1,\"createdAt\":\"DATE\"},{\"id\":202,\"pid\":\"PID\",\"attributeId\":202,\"attributePid\":\"PID\",\"attributeName\":\"size\",\"attributeDescription\":\"The labelled size used to distinguish product variants.\",\"displayOrder\":2,\"createdAt\":\"DATE\"}],\"variants\":[{\"id\":201,\"pid\":\"PID\",\"sku\":\"TSHIRT-BLK-M\",\"price\":\"24.99\",\"stockQuantity\":32,\"isDefault\":true,\"options\":[{\"id\":201,\"pid\":\"PID\",\"attributeId\":201,\"attributePid\":\"PID\",\"attributeName\":\"colour\",\"attributeDescription\":\"The colour or finish used to distinguish product variants.\",\"attributeValueId\":201,\"attributeValuePid\":\"PID\",\"value\":\"Black\",\"createdAt\":\"DATE\"},{\"id\":202,\"pid\":\"PID\",\"attributeId\":202,\"attributePid\":\"PID\",\"attributeName\":\"size\",\"attributeDescription\":\"The labelled size used to distinguish product variants.\",\"attributeValueId\":205,\"attributeValuePid\":\"PID\",\"value\":\"M\",\"createdAt\":\"DATE\"}],\"pictures\":[{\"id\":201,\"pid\":\"PID\",\"imageLink\":\"https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=900&q=80\",\"displayOrder\":1,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}],\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null},{\"id\":202,\"pid\":\"PID\",\"sku\":\"TSHIRT-BLU-L\",\"price\":\"24.99\",\"stockQuantity\":18,\"isDefault\":false,\"options\":[{\"id\":203,\"pid\":\"PID\",\"attributeId\":201,\"attributePid\":\"PID\",\"attributeName\":\"colour\",\"attributeDescription\":\"The colour or finish used to distinguish product variants.\",\"attributeValueId\":202,\"attributeValuePid\":\"PID\",\"value\":\"Marine Blue\",\"createdAt\":\"DATE\"},{\"id\":204,\"pid\":\"PID\",\"attributeId\":202,\"attributePid\":\"PID\",\"attributeName\":\"size\",\"attributeDescription\":\"The labelled size used to distinguish product variants.\",\"attributeValueId\":206,\"attributeValuePid\":\"PID\",\"value\":\"L\",\"createdAt\":\"DATE\"}],\"pictures\":[{\"id\":202,\"pid\":\"PID\",\"imageLink\":\"https://images.unsplash.com/photo-1503341504253-dff4815485f1?auto=format&fit=crop&w=900&q=80\",\"displayOrder\":2,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}],\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}],\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}",
)
