service/tests/requests/snapshots/products/can_list_product_attributes_with_values@products.snap
---
source: tests/requests/products.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "[{\"attribute\":{\"id\":201,\"pid\":\"PID\",\"name\":\"colour\",\"description\":\"The colour or finish used to distinguish product variants.\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},\"values\":[{\"id\":201,\"pid\":\"PID\",\"attributeId\":201,\"value\":\"Black\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":213,\"pid\":\"PID\",\"attributeId\":201,\"value\":\"Brown\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":214,\"pid\":\"PID\",\"attributeId\":201,\"value\":\"Grey\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":202,\"pid\":\"PID\",\"attributeId\":201,\"value\":\"Marine Blue\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":212,\"pid\":\"PID\",\"attributeId\":201,\"value\":\"Natural\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":211,\"pid\":\"PID\",\"attributeId\":201,\"value\":\"Sand\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":203,\"pid\":\"PID\",\"attributeId\":201,\"value\":\"White\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}]},{\"attribute\":{\"id\":203,\"pid\":\"PID\",\"name\":\"material\",\"description\":\"The primary material or composition of the product.\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},\"values\":[{\"id\":209,\"pid\":\"PID\",\"attributeId\":203,\"value\":\"100% Cotton\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":210,\"pid\":\"PID\",\"attributeId\":203,\"value\":\"Leather\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}]},{\"attribute\":{\"id\":202,\"pid\":\"PID\",\"name\":\"size\",\"description\":\"The labelled size used to distinguish product variants.\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},\"values\":[{\"id\":218,\"pid\":\"PID\",\"attributeId\":202,\"value\":\"40\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":219,\"pid\":\"PID\",\"attributeId\":202,\"value\":\"41\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":207,\"pid\":\"PID\",\"attributeId\":202,\"value\":\"42\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":208,\"pid\":\"PID\",\"attributeId\":202,\"value\":\"43\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":206,\"pid\":\"PID\",\"attributeId\":202,\"value\":\"L\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":205,\"pid\":\"PID\",\"attributeId\":202,\"value\":\"M\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":215,\"pid\":\"PID\",\"attributeId\":202,\"value\":\"One Size\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":204,\"pid\":\"PID\",\"attributeId\":202,\"value\":\"S\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":216,\"pid\":\"PID\",\"attributeId\":202,\"value\":\"XL\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":217,\"pid\":\"PID\",\"attributeId\":202,\"value\":\"XXL\",\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}]}]",
)
