service/tests/requests/snapshots/products/can_list_products@products.snap
---
source: tests/requests/products.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"data\":[{\"pid\":\"PID\",\"name\":\"Court Leather Sneakers\",\"description\":\"Low-profile leather sneakers with cushioned insoles.\",\"information\":{\"Care\":\"Wipe clean\",\"Material\":\"Leather\",\"Sole\":\"Rubber\"},\"category\":{\"id\":103,\"pid\":\"PID\",\"name\":\"shoes\",\"slug\":\"shoes\"},\"primaryImage\":\"https://cdn.example.com/products/court-leather-sneakers-white.png\",\"defaultVariant\":{\"pid\":\"PID\",\"sku\":\"SNEAKER-WHT-42\",\"price\":\"89.99\",\"stockQuantity\":9},\"variantCount\":2,\"optionCount\":2,\"totalStock\":16,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}],\"pagination\":{\"page\":1,\"limit\":10,\"totalItems\":1,\"totalPages\":1,\"hasNext\":false,\"hasPrev\":false}}",
)
