service/tests/requests/snapshots/products/can_list_products_without_credentials@products.snap
---
source: tests/requests/products.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"data\":[{\"pid\":\"PID\",\"name\":\"Court Leather Sneakers\",\"description\":\"Low-profile leather sneakers with cushioned insoles.\",\"information\":{\"Care\":\"Wipe clean\",\"Material\":\"Leather\",\"Sole\":\"Rubber\"},\"category\":{\"id\":103,\"pid\":\"PID\",\"name\":\"shoes\",\"slug\":\"shoes\"},\"primaryImage\":\"https://cdn.example.com/products/court-leather-sneakers-white.png\",\"defaultVariant\":{\"pid\":\"PID\",\"sku\":\"SNEAKER-WHT-42\",\"price\":\"89.99\",\"stockQuantity\":9},\"variantCount\":2,\"optionCount\":2,\"totalStock\":16,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null},{\"pid\":\"PID\",\"name\":\"Tailored Chino Trousers\",\"description\":\"Mid-weight chinos with a tapered leg and stretch waistband.\",\"information\":{\"Care\":\"Machine wash cold\",\"Fit\":\"Tapered\",\"Material\":\"Cotton blend\"},\"category\":{\"id\":102,\"pid\":\"PID\",\"name\":\"trousers\",\"slug\":\"trousers\"},\"primaryImage\":\"https://cdn.example.com/products/tailored-chino-trousers-black.png\",\"defaultVariant\":{\"pid\":\"PID\",\"sku\":\"CHINO-BLK-M\",\"price\":\"54.99\",\"stockQuantity\":21},\"variantCount\":2,\"optionCount\":2,\"totalStock\":33,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null},{\"pid\":\"PID\",\"name\":\"Classic Cotton T-shirt\",\"description\":\"Soft everyday cotton t-shirt with a relaxed fit.\",\"information\":{\"Care\":\"Machine wash cold\",\"Fit\":\"Relaxed\",\"Material\":\"100% cotton\"},\"category\":{\"id\":101,\"pid\":\"PID\",\"name\":\"t-shirts\",\"slug\":\"t-shirts\"},\"primaryImage\":\"https://cdn.example.com/products/classic-cotton-tshirt-black.png\",\"defaultVariant\":{\"pid\":\"PID\",\"sku\":\"TSHIRT-BLK-M\",\"price\":\"24.99\",\"stockQuantity\":32},\"variantCount\":2,\"optionCount\":2,\"totalStock\":50,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}],\"pagination\":{\"page\":1,\"limit\":20,\"totalItems\":3,\"totalPages\":1,\"hasNext\":false,\"hasPrev\":false}}",
)
