service/tests/requests/snapshots/products/can_list_products_without_permission@products.snap
---
source: tests/requests/products.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"data\":[{\"pid\":\"PID\",\"slug\":\"pleated-wide-leg-trousers\",\"name\":\"Pleated Wide-leg Trousers\",\"description\":\"Fluid wide-leg trousers with front pleats and a clean tailored waistband.\",\"information\":{\"Fit\":\"Wide leg\",\"Material\":\"Tencel blend\",\"Rise\":\"High rise\"},\"category\":{\"id\":102,\"pid\":\"PID\",\"name\":\"trousers\",\"slug\":\"trousers\"},\"primaryImage\":\"https://images.unsplash.com/photo-1594633312681-425c7b97ccd1?auto=format&fit=crop&w=900&q=80\",\"defaultVariant\":{\"pid\":\"PID\",\"sku\":\"PLEAT-BLK-M\",\"price\":\"64.99\",\"stockQuantity\":23},\"variantCount\":6,\"optionCount\":2,\"totalStock\":94,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null},{\"pid\":\"PID\",\"slug\":\"mesh-running-trainers\",\"name\":\"Mesh Running Trainers\",\"description\":\"Lightweight trainers with a breathable mesh upper and responsive foam sole.\",\"information\":{\"Care\":\"Hand wash\",\"Sole\":\"Cushioned foam\",\"Upper\":\"Recycled mesh\"},\"category\":{\"id\":103,\"pid\":\"PID\",\"name\":\"shoes\",\"slug\":\"shoes\"},\"primaryImage\":\"https://images.unsplash.com/photo-1552346154-21d32810aba3?auto=format&fit=crop&w=900&q=80\",\"defaultVariant\":{\"pid\":\"PID\",\"sku\":\"RUNNER-GRY-42\",\"price\":\"109.99\",\"stockQuantity\":11},\"variantCount\":7,\"optionCount\":2,\"totalStock\":62,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null},{\"pid\":\"PID\",\"slug\":\"brushed-wool-scarf\",\"name\":\"Brushed Wool Scarf\",\"description\":\"A warm, softly brushed wool scarf with subtle fringed ends.\",\"information\":{\"Care\":\"Dry clean only\",\"Dimensions\":\"180 × 30 cm\",\"Material\":\"Lambswool\"},\"category\":{\"id\":105,\"pid\":\"PID\",\"name\":\"accessories\",\"slug\":\"accessories\"},\"primaryImage\":\"https://images.unsplash.com/photo-1520903920243-00d872a2d1c9?auto=format&fit=crop&w=900&q=80\",\"defaultVariant\":{\"pid\":\"PID\",\"sku\":\"SCARF-GRY-OS\",\"price\":\"39.99\",\"stockQuantity\":0},\"variantCount\":5,\"optionCount\":2,\"totalStock\":44,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null},{\"pid\":\"PID\",\"slug\":\"full-grain-leather-belt\",\"name\":\"Full-grain Leather Belt\",\"description\":\"A vegetable-tanned leather belt finished with a brushed metal buckle.\",\"information\":{\"Hardware\":\"Brushed steel\",\"Material\":\"Full-grain leather\",\"Width\":\"32 mm\"},\"category\":{\"id\":105,\"pid\":\"PID\",\"name\":\"accessories\",\"slug\":\"accessories\"},\"primaryImage\":\"https://images.unsplash.com/photo-1624222247344-550fb60583dc?auto=format&fit=crop&w=900&q=80\",\"defaultVariant\":{\"pid\":\"PID\",\"sku\":\"BELT-BRN-M\",\"price\":\"44.99\",\"stockQuantity\":15},\"variantCount\":7,\"optionCount\":2,\"totalStock\":92,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null},{\"pid\":\"PID\",\"slug\":\"everyday-canvas-tote\",\"name\":\"Everyday Canvas Tote\",\"description\":\"A roomy heavyweight canvas tote with reinforced handles and an inner pocket.\",\"information\":{\"Capacity\":\"18 litres\",\"Care\":\"Spot clean\",\"Material\":\"Cotton canvas\"},\"category\":{\"id\":105,\"pid\":\"PID\",\"name\":\"accessories\",\"slug\":\"accessories\"},\"primaryImage\":\"https://images.unsplash.com/photo-1594223274512-ad4803739b7c?auto=format&fit=crop&w=900&q=80\",\"defaultVariant\":{\"pid\":\"PID\",\"sku\":\"TOTE-NAT-OS\",\"price\":\"34.99\",\"stockQuantity\":46},\"variantCount\":6,\"optionCount\":2,\"totalStock\":185,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null},{\"pid\":\"PID\",\"slug\":\"oxford-button-down-shirt\",\"name\":\"Oxford Button-down Shirt\",\"description\":\"A crisp cotton Oxford shirt cut for comfortable everyday layering.\",\"information\":{\"Collar\":\"Button-down\",\"Fit\":\"Tailored\",\"Material\":\"Oxford cotton\"},\"category\":{\"id\":104,\"pid\":\"PID\",\"name\":\"shirts\",\"slug\":\"shirts\"},\"primaryImage\":\"https://images.unsplash.com/photo-1596755094514-f87e34085b2c?auto=format&fit=crop&w=900&q=80\",\"defaultVariant\":{\"pid\":\"PID\",\"sku\":\"OXFORD-BLU-L\",\"price\":\"59.99\",\"stockQuantity\":4},\"variantCount\":7,\"optionCount\":2,\"totalStock\":90,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null},{\"pid\":\"PID\",\"slug\":\"washed-linen-shirt\",\"name\":\"Washed Linen Shirt\",\"description\":\"A breathable linen shirt with a soft washed finish and easy shape.\",\"information\":{\"Care\":\"Machine wash gentle\",\"Fit\":\"Regular\",\"Material\":\"100% linen\"},\"category\":{\"id\":104,\"pid\":\"PID\",\"name\":\"shirts\",\"slug\":\"shirts\"},\"primaryImage\":\"https://images.unsplash.com/photo-1603252109303-2751441dd157?auto=format&fit=crop&w=900&q=80\",\"defaultVariant\":{\"pid\":\"PID\",\"sku\":\"LINEN-SAND-M\",\"price\":\"69.99\",\"stockQuantity\":28},\"variantCount\":7,\"optionCount\":2,\"totalStock\":122,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null},{\"pid\":\"PID\",\"slug\":\"court-leather-sneakers\",\"name\":\"Court Leather Sneakers\",\"description\":\"Low-profile leather sneakers with cushioned insoles.\",\"information\":{\"Care\":\"Wipe clean\",\"Material\":\"Leather\",\"Sole\":\"Rubber\"},\"category\":{\"id\":103,\"pid\":\"PID\",\"name\":\"shoes\",\"slug\":\"shoes\"},\"primaryImage\":\"https://images.unsplash.com/photo-1608231387042-66d1773070a5?auto=format&fit=crop&w=900&q=80\",\"defaultVariant\":{\"pid\":\"PID\",\"sku\":\"SNEAKER-WHT-42\",\"price\":\"89.99\",\"stockQuantity\":9},\"variantCount\":7,\"optionCount\":2,\"totalStock\":67,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null},{\"pid\":\"PID\",\"slug\":\"tailored-chino-trousers\",\"name\":\"Tailored Chino Trousers\",\"description\":\"Mid-weight chinos with a tapered leg and stretch waistband.\",\"information\":{\"Care\":\"Machine wash cold\",\"Fit\":\"Tapered\",\"Material\":\"Cotton blend\"},\"category\":{\"id\":102,\"pid\":\"PID\",\"name\":\"trousers\",\"slug\":\"trousers\"},\"primaryImage\":\"https://images.unsplash.com/photo-1594633312681-425c7b97ccd1?auto=format&fit=crop&w=900&q=80\",\"defaultVariant\":{\"pid\":\"PID\",\"sku\":\"CHINO-BLK-M\",\"price\":\"54.99\",\"stockQuantity\":21},\"variantCount\":6,\"optionCount\":2,\"totalStock\":94,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null},{\"pid\":\"PID\",\"slug\":\"classic-cotton-t-shirt\",\"name\":\"Classic Cotton T-shirt\",\"description\":\"Soft everyday cotton t-shirt with a relaxed fit.\",\"information\":{\"Care\":\"Machine wash cold\",\"Fit\":\"Relaxed\",\"Material\":\"100% cotton\"},\"category\":{\"id\":101,\"pid\":\"PID\",\"name\":\"t-shirts\",\"slug\":\"t-shirts\"},\"primaryImage\":\"https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=900&q=80\",\"defaultVariant\":{\"pid\":\"PID\",\"sku\":\"TSHIRT-BLK-M\",\"price\":\"24.99\",\"stockQuantity\":32},\"variantCount\":6,\"optionCount\":2,\"totalStock\":118,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}],\"pagination\":{\"page\":1,\"limit\":20,\"totalItems\":10,\"totalPages\":1,\"hasNext\":false,\"hasPrev\":false}}",
)
