service/tests/requests/snapshots/products/cannot_create_product_when_category_does_not_exist@products.snap
---
source: tests/requests/products.rs
expression: "(response.status_code(), response.text())"
---
(
    404,
    "{\"error\":\"Category does not exist.\",\"code\":\"invalid_reference\"}",
)
