service/tests/requests/snapshots/products/cannot_create_product_when_name_is_invalid@products.snap
---
source: tests/requests/products.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"One or more fields failed validation\",\"code\":\"validation_error\",\"details\":{\"name\":\"Name is required\"}}",
)
