service/tests/requests/snapshots/products/cannot_create_product_when_picture_url_is_invalid@products.snap
---
source: tests/requests/products.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"{\\\"pictures[0].image_link\\\":\\\"Invalid image URL\\\"}\"}",
)
